@@ -32,6 +32,11 @@ exclude_filename = MANIFEST.SKIP
 remove = Plack::Util
 remove = Plack::Util::Accessor
 
+[Prereqs]
+-phase = develop
+-relationship = requires
+Test::Vars = 0.015
+
 [EnsurePrereqsInstalled]
 :version = 0.003
 type = requires
