@@ -1,0 +1,17 @@
+#!perl
+
+use strict;
+use warnings;
+
+BEGIN {
+  unless ($ENV{AUTHOR_TESTING}) {
+    print qq{1..0 # SKIP these tests are for testing by the author\n};
+    exit
+  }
+}
+
+use Test::More;
+
+eval "use Test::Vars";
+
+all_vars_ok();
