@@ -9,6 +9,9 @@ Revision history for Plack-Middleware-Statsd
   [Documentation]
   - Bump copyright year.
 
+  [Tests]
+  - Add more author tests.
+
 v0.4.5    2020-05-11 18:29:17+01:00 Europe/London
   [Documentation]
   - Updated section on the psgi.worker.pid metric.
